syntax = "proto3";
package consumer.pricefeed;

import "gogoproto/gogo.proto";
// import "cosmos_proto/cosmos.proto";

option go_package = "github.com/bandprotocol/consumer/x/pricefeed/types";
option (gogoproto.equal_all) = true;

message Price {
  string symbol = 1;
  uint64 price = 2;
  int64 resolve_time = 3;
}

message SymbolRequest {
  string symbol = 1;
  uint64 oracle_script_id = 2;
  uint64 block_interval = 3;
}

message UpdateSymbolRequestProposal {
  option (gogoproto.goproto_getters) = false;

  string title = 1;
  string description = 2;

  repeated SymbolRequest symbol_requests = 3 [ (gogoproto.nullable) = false ];
}

